# mountain-retreat-x1

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LEGAL_AND_PROFESSIONAL_LIMITS.md  Makefile  PLANS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.agents/: README.md
.codex/: README.md  git-workflow.md  implementation-roadmap.md  output-manifest.md  project-brief.md  repository-contract.md  safety-rules.md  validation-checklist.md
config/: assumptions.yaml  building.yaml  calculator_assumptions.yaml  checklists.yaml  checklists_seed.yaml  construction_phases.yaml  cost_assumptions_serbia_2026.yaml  cost_rates.yaml  drawing_settings.yaml  localization.yaml  materials.yaml  materials_core.yaml  materials_mep.yaml  off_grid.yaml  project.yaml  regulatory_placeholders_serbia.yaml  rooms_gallery.yaml  rooms_ground_floor.yaml  schedule.yaml  site.yaml  smart_home.yaml  spaces.yaml  terrace.yaml
config/examples/: README.md
config/variants/: masonry_hybrid.yaml  premium_clt.yaml  standard_hybrid.yaml
data/catalogs/: README.md
data/localization/: README.md  en.yaml  sr-Latn.yaml
docs/: generation-safety.md  phase-deliverables.md  repository-structure.md  risk-register.md  testing-strategy.md
docs/legal/: README.md
docs/templates/: README.md
docs/volumes/: 15_serbia_balkan_context.md  README.md
docs_src/: construction_notes.md  design_intent.md  overview.md  review_requirements.md  safety_notes.md
src/mountain_retreat_x1/: __init__.py
tests/integration/: test_cli_commands.py  test_excel_bom_generation.py  test_excel_cost_generation.py  test_excel_gantt_generation.py  test_excel_maintenance_generation.py  test_excel_qa_generation.py  test_final_build_pipeline.py  test_markdown_generation.py  test_package.py  test_pdf_generation.py  test_svg_generation.py  (+1 more)
(+49 files in other folders)
