[project]
name = "mountain-retreat-x1"
version = "0.1.0"
description = "Preliminary planning documentation generator for Mountain Retreat X1."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "jinja2",
  "openpyxl",
  "pydantic",
  "pyyaml",
  "typer",
]

[project.optional-dependencies]
pdf = [
  "reportlab",
]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
